# OminiBerry

./: .env  .env.example  .gitignore  README.md  classes.txt  pyproject.toml  requirements.txt  test_img.json
app/: __init__.py
app/api/: __init__.py  main.py  routes_cases.py  routes_diagnosis.py  routes_knowledge.py  routes_runs.py  schemas_http.py
app/core/: __init__.py  config.py  errors.py  llm_clients.py  types.py  utils.py
app/core/agents/: __init__.py  knowledge_prose.py  leaf_clinical_context.py  orchestrator.py  prompts.py  protocol_schema.py  report_packet.py  report_quality.py  sanitizer.py
app/core/caption/: __init__.py  dinov3_caption.py  presentation.py  provider_base.py  provider_http_placeholder.py  qwen3_vl_provider.py  schema.py
app/core/pipeline/: __init__.py  diagnosis_pipeline.py
app/core/retrieval/: __init__.py  faceted_retriever.py  knowledge_base.py  reranker_client.py
app/core/runtime/: __init__.py  concurrency.py
app/core/storage/: __init__.py  case_library.py  run_store.py
app/core/vision/: __init__.py  dinov3_service.py  merged_result.py  presentation.py
app/ui/static/: app.js  styles.css
app/ui/templates/: index.html
case_library/unverified/: cases.jsonl
case_library/verified/: cases.jsonl
runs/_error_logs/: error_20260404_130708_5a967912.json
runs/run_20260404_151651_7230c286/: final.json  input.json  reports.json  safety.json  trace.json
runs/run_20260609_101203_15888c53/: caption.json  final.json  input.json  reports.json  safety.json  trace.json
scripts/: run_api.py  run_cli.py  run_dinov3_probe.py
