[project]
name = "ominiberry"
version = "0.1.0"
description = "OminiBerry strawberry disease diagnosis and control decision support system"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.135.2",
    "httpx==0.28.1",
    "langchain_community==0.4.1",
    "langchain_core==1.2.20",
    "langchain_ollama==1.0.1",
    "Pillow==12.1.1",
    "pydantic==2.12.5",
    "pytest==9.0.2",
    "python-dotenv==1.2.2",
    "tqdm==4.67.1",
    "transformers==5.3.0",
    "lm-format-enforcer>=0.10,<0.11",
    "peft>=0.13",
    "uvicorn[standard]>=0.30,<0.31",
    "python-multipart>=0.0.22",
]

[tool.uv]
package = false

